fix mobile header alignment

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -55,14 +55,12 @@
 
 @media screen and (max-width: 299px) {
   .header {
-    align-items: center;
     display: grid;
     grid-template-areas:
       'header-title header-title'
       'menu-toggle header-icons'
       'header-nav header-nav';
-    grid-template-columns: min-content min-content;
-    justify-content: center;
+    grid-template-columns: 1fr 1fr;
   }
   .header-title {
     align-items: center;
@@ -72,8 +70,9 @@
     flex-direction: column;
     font-size: 1rem;
     gap: 0.25rem;
+    justify-content: center;
     line-height: var(--line-height-normal);
-    padding: var(--padding) var(--padding) 0 var(--padding);
+    padding: var(--padding) var(--padding) 0.5rem var(--padding);
     position: relative;
     text-transform: capitalize;
     user-select: none;
@@ -136,9 +135,6 @@
   }
   .header-icons {
     align-items: center;
-    /* background-color: var(--theme-color); */
-    /* margin: var(--padding); */
-    /* padding-right: var(--padding); */
   }
 
   .nav-link {
@@ -168,6 +164,7 @@
     backdrop-filter: blur(10px);
     background-color: var(--platinum-overlay);
     display: flex;
+    flex-direction: column;
     height: var(--collapsible-nav-height);
     overflow: hidden;
     position: var(--position-nav);
@@ -179,24 +176,22 @@
 
 @media screen and (min-width: 300px) and (max-width: 399px) {
   .header {
-    align-items: center;
     display: grid;
     grid-template-areas:
       'header-title header-title'
       'menu-toggle header-icons'
       'header-nav header-nav';
-    grid-template-columns: min-content min-content;
-    justify-content: center;
+    grid-template-columns: 1fr 1fr;
   }
   .header-title {
-    align-items: center;
     box-sizing: border-box;
     cursor: pointer;
     display: flex;
     font-size: 1rem;
     gap: 0.25rem;
+    justify-content: center;
     line-height: var(--line-height-normal);
-    padding: var(--padding) var(--padding) 0 var(--padding);
+    padding: var(--padding) var(--padding) 0.5rem var(--padding);
     position: relative;
     text-transform: capitalize;
     user-select: none;
@@ -226,17 +221,11 @@
   }
 
   .header-nav {
-    align-items: flex-start;
     box-sizing: border-box;
     display: flex;
-    flex-grow: 1;
-    flex-wrap: wrap;
     gap: 0.125rem;
     height: var(--collapsible-nav-height);
-    justify-content: center;
-    justify-content: space-evenly;
     min-height: var(--collapsible-nav-height);
-    order: 3;
     overflow: visible;
     position: relative;
   }
@@ -264,9 +253,6 @@
   }
   .header-icons {
     align-items: center;
-    /* background-color: var(--theme-color); */
-    /* margin: var(--padding); */
-    /* padding-right: var(--padding); */
   }
 
   .nav-link {
@@ -296,6 +282,7 @@
     backdrop-filter: blur(10px);
     background-color: var(--platinum-overlay);
     display: flex;
+    flex-direction: column;
     height: var(--collapsible-nav-height);
     overflow: hidden;
     position: var(--position-nav);
