--- a/src/components/menu-toggle.css
+++ b/src/components/menu-toggle.css
@@ -63,7 +63,7 @@
 @media screen and (max-width: 399px) {
   .menu-toggle {
     justify-self: end;
-    margin-bottom: 0.75rem;
+    margin-bottom: 1.25rem;
     margin-top: 0.75rem;
   }
 }
