--- a/src/components/theme-toggle.css
+++ b/src/components/theme-toggle.css
@@ -65,7 +65,7 @@
 
 @media screen and (max-width: 399px) {
   .theme-toggle {
-    margin-bottom: 0.75rem;
+    margin-bottom: 1.25rem;
     margin-top: 0.75rem;
   }
 }
